--- a/LoanSystem.Api/appsettings.json
+++ b/LoanSystem.Api/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=loan-system;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+  "AuthenticationOptions": {
+    "Secret": "super-secret-key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
