--- a/LoanSystem.Services/LoanSystem.Services.csproj
+++ b/LoanSystem.Services/LoanSystem.Services.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.8" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LoanSystem.Data\LoanSystem.Data.csproj" />
