Bugfix Post method to send JSON to the web service

--- a/LoanSystem.Contracts/LoanSystem.Contracts.csproj
+++ b/LoanSystem.Contracts/LoanSystem.Contracts.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Authorization\Requests\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LoanSystem.Models\LoanSystem.Models.csproj" />
+  </ItemGroup>
+
 </Project>
