--- a/LoanSystem.Application/LoanSystem.Application.csproj
+++ b/LoanSystem.Application/LoanSystem.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LoanSystem.Models\LoanSystem.Models.csproj" />
   </ItemGroup>
 
