setting up jwt support

--- a/LoanSystem.Api/appsettings.json
+++ b/LoanSystem.Api/appsettings.json
@@ -2,9 +2,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=loan-system;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "AuthenticationOptions": {
-    "Secret": "super-secret-key"
+
+  "JwtOptions": {
+    "Issuer": "LoanSystem",
+    "IssuerSigningKey": "super-secret-keyd75upiqfz1bcgc0xxqjgakj83z0l9feqjgakj83z0l9f",
+    "Expiry": "00:00:45",
+    "Audience": "LoanSystem"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
