setting up registration policy evaluator

--- a/LoanSystem.Api/appsettings.json
+++ b/LoanSystem.Api/appsettings.json
@@ -3,6 +3,10 @@
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=loan-system;Trusted_Connection=True;TrustServerCertificate=True;"
   },
 
+  "RegistrationOptions": {
+    "Enabled": true
+  },
+
   "JwtOptions": {
     "Issuer": "LoanSystem",
     "IssuerSigningKey": "super-secret-keyd75upiqfz1bcgc0xxqjgakj83z0l9feqjgakj83z0l9f",
